--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     Hi !! I am Vikas Thombare...
+    I am studying Bachelors of Engineering from PCCOER
+    My core domain in civil
+
 </body>
 </html>
