update: added details of project

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     I am studying Bachelors of Engineering from PCCOER
     My core domain in civil
 
+    I made a few CLI apps which i will publish here tomorow..
+
 </body>
 </html>
